<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentDialogFragment">


    <TextView
        android:id="@+id/student_name_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_info_title" />

    <TextView
        android:id="@+id/student_email_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_email"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_name_dialog" />

    <TextView
        android:id="@+id/student_phone_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_phone_number"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_email_dialog" />

    <TextView
        android:id="@+id/student_gpa_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_gpa"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_graduation_dialog" />

    <TextView
        android:id="@+id/student_major_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_major"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/academic_info_title" />

    <TextView
        android:id="@+id/academic_info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/academic_information"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_phone_dialog" />

    <TextView
        android:id="@+id/contact_info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_information"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_graduation_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_graduation_year"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_major_dialog" />

    <Button
        android:id="@+id/viewPDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_student_resume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>